Replace baseurl with url

--- a/404.md
+++ b/404.md
@@ -7,5 +7,5 @@ layout: title-page
 
 We couldn't find that page, it may be misspelled or removed.
 
-* [Home]({{ site.baseurl }})
+* [Home]({{ site.url }})
 * [back](javascript:history.back())
